# strupnet

./: LICENSE  README.md  pyproject.toml
examples/: linear_system_example.ipynb  linear_utils.py  representation_of_linear_symplectic_flows.ipynb  sympnet_example.ipynb  utils.py  volnet_example.ipynb
strupnet/: __init__.py  bea.py  hnn.py  snn.py  utils.py  vnn.py
strupnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
strupnet/layers/: G.py  GR.py  H.py  LA.py  P.py  R.py  RBF.py
strupnet/nn/: activation.py  scalar.py
strupnet/tests/: test_sympnet.py
