# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strupnet"
version = "0.0.4"
description = "Structure-preserving neural networks"
readme = "README.md"
authors = [{ name = "Ben Tapley", email = "bentapley@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pytorch", "neural networks", "physics-informed machine learning", "structure-preserving neural networks"]
dependencies = [
    "torch",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/bentaps/strupnet"
